--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 langchain-rust = "4.6.0"
 tauri-plugin-store = "2"
+reqwest = { version = "0.12", features = ["json", "multipart"] }
