--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = "1"
 langchain-rust = "4.6.0"
 tauri-plugin-store = "2"
 reqwest = { version = "0.12", features = ["json", "multipart"] }
+regex = "1"
