--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,5 @@ langchain-rust = "4.6.0"
 tauri-plugin-store = "2"
 reqwest = { version = "0.12", features = ["json", "multipart"] }
 regex = "1"
+mime_guess = "2.0"
+tokio = { version = "1", features = ["full"] }
